# ChangeLog for media-video/mplayer
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/mplayer/ChangeLog,v 1.65 2003/07/15 21:15:43 mholzer Exp $

  16 Jul 2003; Martin Holzer <mholzer@gentoo.org> mplayer-0.90-r2.ebuild,
  mplayer-0.90-r3.ebuild, mplayer-0.90_rc4.ebuild, mplayer-0.90_rc5.ebuild:
  Added IUSE flag for xmms. Closes #20090.

  16 Jul 2003; Martin Holzer <mholzer@gentoo.org> mplayer-0.90-r2.ebuild:
  Marked x86 stable.

*mplayer-0.90-r3 (16 Jul 2003)

  16 Jul 2003; Martin Holzer <mholzer@gentoo.org> mplayer-0.90-r3.ebuild:
  Added vidix support. Submitted by phoen][x <fisi.tilman.klar@gmx.de> in #20114.

*mplayer-0.90-r2 (01 Jul 2003)

  01 Jul 2003; Martin Holzer <mholzer@gentoo.org> mplayer-0.90-r2.ebuild,
  files/mplayer-0.90-divx.patch:
  Adding logic to detect newer DivX Api and patching. Closes #23795.

  11 Jun 2003; Jason Wever <weeve@gentoo.org> mplayer-0.90-r1.ebuild:
  Added ~sparc to keywords.

*mplayer-0.90-r1 (27 Apr 2003)

  27 Apr 2003; Martin Schlemmer <azarah@gentoo.org> mplayer-0.90-r1.ebulid,
  mplayer-0.90-fix-version.patch :
  - Fix version (still displayed as rc5), bug #19691.
  - Change DEPEND to only depend and enable faad2 support if 'mpeg' in USE,
    closing bug #19119.
  - Add SMB (Samba) support, closing bug #16395.

*mplayer-0.90 (09 Apr 2003)

  20 Apr 2003; Seemant Kulleen <seemant@gentoo.org> mplayer-0.90.ebuild :
  Added faad2 and enabling faad in econf -- satisies many requests to be able to
  play the Matrix trailers.

  16 Apr 2003; Lars Weiler <pylon@gentoo.org> mplayer-0.90.ebuild,
  files/mplayer-0.90-ppc-benh.patch:
  No big change.
  Added the mentioned patch in bug #18511 for the right order of the
  ppc-processor-switch and some more ppc-related einfo-lines about the altivec
  issue with DivX.

  09 Mar 2003; Martin Schlemmer <azarah@gentoo.org> mplayer-0.90.ebuild :
  New version: